--- a/OrderDemo.Tests/OrderDemo.Tests.csproj
+++ b/OrderDemo.Tests/OrderDemo.Tests.csproj
@@ -86,6 +86,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BankAccountControllerTests.cs" />
     <Compile Include="Controllers\ProductsControllerTest.cs" />
     <Compile Include="Fakes\ControllerExtensions.cs" />
     <Compile Include="Fakes\Fake.cs" />
